fix half rem missalign
and close missing span tags

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -19,6 +19,7 @@
 
 #header-item-about, #header-item-contact
   top: 50vh
+  margin-top: -.5rem
 
 #header-item-about
   left: 0
